--- a/pet-web/pom.xml
+++ b/pet-web/pom.xml
@@ -58,6 +58,11 @@
             <artifactId>bootstrap</artifactId>
             <version>${webjars-bootstrap.version}</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.projectlombok</groupId>-->
+<!--            <artifactId>lombok</artifactId>-->
+<!--            <optional>true</optional>-->
+<!--        </dependency>-->
         <!-- end of webjars -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
